<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewallqrcode.UserStatisticsActivity"
    android:orientation="vertical">
    <include layout="@layout/toolbar_logout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_statistics_textView"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

</LinearLayout>