<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_logout"
    style="@style/Widget.MaterialComponents.Toolbar.Primary"
    android:theme="@style/Theme.QRCodeTeam30Toolbar">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_outline_home_24"
            app:iconPadding="0dp"
            android:padding="0dp"
            app:iconGravity="textStart"
            android:layout_marginEnd="10dp"
            android:id="@+id/button_toolbar_home"
            android:backgroundTint="@color/blue2"
            app:iconTint="@color/white"/>


        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_logout_white_24dp"
            app:iconPadding="0dp"
            android:padding="0dp"
            app:iconGravity="textStart"
            android:layout_marginEnd="10dp"
            android:id="@+id/button_logout"
            android:backgroundTint="@color/blue2"
            app:iconTint="@color/white"/>

    </LinearLayout>



</com.google.android.material.appbar.MaterialToolbar>