...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="\nGenerate QR Code\n"
            android:fontFamily="@font/comedysketchdemoregular"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/button_myProfile_generateQRCode"
            android:backgroundTint="@color/blue2"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/MyProfileImageView"
            android:scaleType="fitCenter"/>


    </LinearLayout>

</LinearLayout>
